Fix formblock alignment and spacing
Vertically align elements in formblock divs to the middle so that our
labels don't sit at the bottom of the div. Add padding on top and bottom
in place of <br> tags.

--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,20 @@ div .data table {
     border-collapse: collapse;
 }
 
+
+.formblock {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.formblock > * {
+    vertical-align: middle;
+}
+
 .formblock label {
-    text-align: right;
     vertical-align: middle;
     display: inline-block;
+    text-align: right;
     width: 200px;
     padding-right: 10px;
 }
